{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 850,
  "lineage": "663bb148-9013-34bd-388b-3951699401ad",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:subnet/subnet-00953512c2d44b0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.128.0/18",
            "default_for_az": false,
            "id": "subnet-00953512c2d44b0c3",
            "map_public_ip_on_launch": true,
            "owner_id": "338430314199",
            "state": "available",
            "tags": {
              "Attributes": "public",
              "Name": "fairwinds-poc-kg4sre-public-usw1b",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:vpc/vpc-0a2b115c412c9dbe3",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02936e9462573980e",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-bcc25ad9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2b115c412c9dbe3",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06b4acdef5217f8cb",
            "ipv6_cidr_block": "2600:1f1c:748:b900::/56",
            "main_route_table_id": "rtb-0297c109909da7a7e",
            "owner_id": "338430314199",
            "state": "available",
            "tags": {
              "Name": "fairwinds-poc-kg4sre",
              "Namespace": "fairwinds",
              "Stage": "poc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:security-group/sg-0823586ab5f4ad60a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0823586ab5f4ad60a",
            "ingress": [],
            "name": "default",
            "owner_id": "338430314199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group",
              "Namespace": "fairwinds",
              "Stage": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f829f3900a4bb6d5",
            "domain": "vpc",
            "id": "eipalloc-0f06ab31",
            "instance": "i-097e5e967dc9a754a",
            "network_interface": "eni-073fa09c5d9dc1f09",
            "private_dns": "ip-172-16-148-190.us-west-1.compute.internal",
            "private_ip": "172.16.148.190",
            "public_dns": "ec2-184-169-198-127.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.198.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fairwinds-poc-kg4sre",
              "Namespace": "fairwinds",
              "Stage": "poc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.generated",
            "module.aws_key_pair.aws_key_pair.imported",
            "module.aws_key_pair.tls_private_key.default",
            "module.ec2_instance.aws_instance.default",
            "module.ec2_instance.aws_security_group.default",
            "module.ec2_instance.data.aws_ami.default",
            "module.ec2_instance.data.aws_ami.info",
            "module.ec2_instance.data.aws_subnet.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07509d53ed1aa0b33",
            "arn": "arn:aws:ec2:us-west-1:338430314199:instance/i-097e5e967dc9a754a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097e5e967dc9a754a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fairwinds-poc-kg4sre",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073fa09c5d9dc1f09",
            "private_dns": "ip-172-16-148-190.us-west-1.compute.internal",
            "private_ip": "172.16.148.190",
            "public_dns": "ec2-54-153-74-26.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.74.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ac75c05fbefe14d5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00953512c2d44b0c3",
            "tags": {
              "Name": "fairwinds-poc-kg4sre",
              "Namespace": "fairwinds",
              "Stage": "poc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06acd3d2e7077306f",
              "sg-0823586ab5f4ad60a"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.generated",
            "module.aws_key_pair.aws_key_pair.imported",
            "module.aws_key_pair.tls_private_key.default",
            "module.ec2_instance.aws_security_group.default",
            "module.ec2_instance.data.aws_ami.default",
            "module.ec2_instance.data.aws_ami.info",
            "module.ec2_instance.data.aws_subnet.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:internet-gateway/igw-05165bee9c1863b42",
            "id": "igw-05165bee9c1863b42",
            "owner_id": "338430314199",
            "tags": {
              "Name": "fairwinds-poc-kg4sre",
              "Namespace": "fairwinds",
              "Stage": "poc"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:network-acl/acl-0f6d0ac4d1d39e8b5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f6d0ac4d1d39e8b5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "338430314199",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0a89bdbc7ae771c4d",
              "subnet-0d0c3abb9f321fad1"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "fairwinds-poc-kg4sre-private",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:network-acl/acl-0905d21c049701384",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0905d21c049701384",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "338430314199",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-00953512c2d44b0c3",
              "subnet-0720b183e99e3de2a"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "fairwinds-poc-kg4sre-public",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05165bee9c1863b42",
            "id": "r-rtb-044f578a7503c82191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044f578a7503c8219",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0680136b31f43c7a6",
            "owner_id": "338430314199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "fairwinds-poc-kg4sre-private-usw1b",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05521226262c62557",
            "owner_id": "338430314199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "fairwinds-poc-kg4sre-private-usw1c",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-044f578a7503c8219",
            "owner_id": "338430314199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "fairwinds-poc-kg4sre-public",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9bd5ce0a37d447d",
            "route_table_id": "rtb-0680136b31f43c7a6",
            "subnet_id": "subnet-0a89bdbc7ae771c4d"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc9889ab75a0b971",
            "route_table_id": "rtb-05521226262c62557",
            "subnet_id": "subnet-0d0c3abb9f321fad1"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b49fbe9d60a2453",
            "route_table_id": "rtb-044f578a7503c8219",
            "subnet_id": "subnet-00953512c2d44b0c3"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c5fc318d395ee37",
            "route_table_id": "rtb-044f578a7503c8219",
            "subnet_id": "subnet-0720b183e99e3de2a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:security-group/sg-06acd3d2e7077306f",
            "description": "Instance default security group (only egress access is allowed)",
            "egress": [],
            "id": "sg-06acd3d2e7077306f",
            "ingress": [],
            "name": "fairwinds-poc-kg4sre",
            "name_prefix": null,
            "owner_id": "338430314199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fairwinds-poc-kg4sre",
              "Namespace": "fairwinds",
              "Stage": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1439319732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06acd3d2e7077306f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2024733945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06acd3d2e7077306f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3458507084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06acd3d2e7077306f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:subnet/subnet-0a89bdbc7ae771c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.0.0/18",
            "id": "subnet-0a89bdbc7ae771c4d",
            "map_public_ip_on_launch": false,
            "owner_id": "338430314199",
            "tags": {
              "Attributes": "private",
              "Name": "fairwinds-poc-kg4sre-private-usw1b",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:subnet/subnet-0d0c3abb9f321fad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.64.0/18",
            "id": "subnet-0d0c3abb9f321fad1",
            "map_public_ip_on_launch": false,
            "owner_id": "338430314199",
            "tags": {
              "Attributes": "private",
              "Name": "fairwinds-poc-kg4sre-private-usw1c",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:subnet/subnet-00953512c2d44b0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.128.0/18",
            "id": "subnet-00953512c2d44b0c3",
            "map_public_ip_on_launch": true,
            "owner_id": "338430314199",
            "tags": {
              "Attributes": "public",
              "Name": "fairwinds-poc-kg4sre-public-usw1b",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:subnet/subnet-0720b183e99e3de2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.192.0/18",
            "id": "subnet-0720b183e99e3de2a",
            "map_public_ip_on_launch": true,
            "owner_id": "338430314199",
            "tags": {
              "Attributes": "public",
              "Name": "fairwinds-poc-kg4sre-public-usw1c",
              "Namespace": "fairwinds",
              "Stage": "poc",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0a2b115c412c9dbe3"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:338430314199:vpc/vpc-0a2b115c412c9dbe3",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e3436b816ba8d932",
            "default_route_table_id": "rtb-0297c109909da7a7e",
            "default_security_group_id": "sg-0823586ab5f4ad60a",
            "dhcp_options_id": "dopt-bcc25ad9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2b115c412c9dbe3",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06b4acdef5217f8cb",
            "ipv6_cidr_block": "2600:1f1c:748:b900::/56",
            "main_route_table_id": "rtb-0297c109909da7a7e",
            "owner_id": "338430314199",
            "tags": {
              "Name": "fairwinds-poc-kg4sre",
              "Namespace": "fairwinds",
              "Stage": "poc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}